--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -711,7 +711,7 @@
     width: 100%;
     height: 4px;
     pointer-events: none;
-    -webkit-appearance: none;
+
     z-index: 3;
     background: transparent;
 }
@@ -1006,13 +1006,13 @@
     color: rgba(255, 255, 255, 0.8);
     position: relative;
 }
-.footer-section p span {
+.footer-section p fo-span {
     font-size: 1.2rem;
     font-weight: bold;
     color: #fff;
     background: linear-gradient(90deg, #0374a8, #3b759c, #a0c9eb);
     background-size: 200% auto;
-    -webkit-background-clip: text;
+
     color: transparent;
     animation: gradientAnimation 3s ease infinite, moveText 2s ease-in-out infinite;
     display: inline-block;
